# cakebot

./: .gitignore  README.md  bot.py  config.py  goodbye.json  main.py  newbot.py  pyproject.toml  responses.py  servers.json  testing.py  testing2.py  welcome.json
