[tool.poetry]
name = "cakebot"
version = "0.1.1"
description = "A Discord bot for Kena's server."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.3.1"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
